css/style.css
/* font-family: 'Roboto', sans-serif;
font-family: 'Shrikhand', cursive; */

/* RESET CSS + REGLE GENERAL*/

html, body {
    width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
}

img {
    width: 100%;
}

h1 {
    font-family: 'Shrikhand', cursive;
}

p {
    font-family: 'Roboto', sans-serif;
}

/* HEADER */

.titre_header {
    text-align: center;
    margin: 10px 0 0px 0;
}


/* FIN HEADER */
/* LOCALISATION */

#localisation {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 10px;
    background-color: #80808050;
    flex-wrap: wrap;
}

#localisation p {
    font-size: 18px;
}

/* FIN LOCALISATION */
/* MENU  */

#menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 350px;
    background-color: rgb(236, 236, 236);
}

#menu h2 {
    text-align: center;
    font-size: 28px;
    margin: 40px 80px 20px 80px;
    font-family:'Roboto', sans-serif;
}

#menu p {
    margin: 10px 10px;
    text-align: center;
    font-size: 20px;
    font-family:'Roboto', sans-serif;
    color: #5e5e5e;
}

#menu div {
    margin: 25px;
}

#menu button {
    background: linear-gradient(#FF79DA, #9356DC);
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    border: none;
    border-radius: 26px;
    height: 50px;
    width: 100%;
    padding: 0px 25px;
    color: white;
}
/* FIN MENU */
/* FONCTIONNEMENT */
#fonctionnement {
    margin: 40px auto;
}

#fonctionnement h2 {
    margin: 15px 0 15px 25px;
}

#container_vignette_fonctionnement {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
    margin: auto 15px;
}

.vignettes_fonctionnement {
    display: flex;
    flex-direction: row;
    align-items: center;
    border: none;
    width: 90%;
    height: 80px;
    border-radius: 18px;
    position: relative;
    gap: 5px;
    background-color: rgb(238, 238, 238);
    box-shadow: 1px 1px 5px 3px #cccccc;
}

.numero_vignette_fonctionnement {
    position: absolute;
    left: -17px;
    background-color: #9356DC;
    padding: 5px 10px;
    border-radius: 22px;
    color: white;
}

.vignettes_fonctionnement span {
    margin: 0 0 0 30px;
}

.select_option {
    font-size: 18px;
    font-family: 'Roboto', sans-serif;
    margin: 0 0 0 20px;
}

/* FIN FONCTIONNEMENT */
/* RESTAURANTS */

#restaurants {
    background-color: rgb(238, 238, 238);
    padding: 40px 0 60px 0;
}

#restaurants h2 {
    margin: 15px 0 15px 25px;
}

#container_vignette_restaurants {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.vignettes_restaurants {
    width: 90%;
    height: 300px;
    margin: 5px auto;
    border-style: none;
    border-radius: 18px;
    position: relative;
    box-shadow: 1px 1px 5px 3px #cccccc;
}

.vignettes_restaurants img {
    width: 100%;
    height: 70%;
    object-fit: cover;
    margin-bottom: 10px;
    border-top-left-radius: 18px;
    border-top-right-radius: 18px;
}

.nouveau {
    margin: 0px 00px 0 0;
    background-color: #99E2D0;
    color: #036d54;
    position: absolute;
    padding: 8px;
    border-radius: 5px;
    top: 15px;
    right: 15px;
}

.vignettes_restaurants a {
    text-decoration: none;
    color: black;
}

.vignettes_restaurants h3 {
    margin: 5px 0 10px 15px;
    font-size: 22px;
}

.emplacement {
    margin: 0 0 0 15px;
}

.favoris {
    position: absolute;
    bottom: 20px;
    right: 20px;
}

.favoris span {
    font-size: 30px;
}

/* FIN RESTAURANTS */
/* FOOTER */

footer {
    background-color: #343434;
    padding: 40px 0 0 0;
}

footer h1, footer span, footer p, footer a {
    color: white;
}

footer h1 {
    font-size: 20px;
    margin: 0 0 20px 40px;
}

#details {
    display: flex;
    flex-direction: column;
    gap: 5px;
}

.details_style {
    display: flex;
    align-items: center;
    gap: 10px;
    margin: 5px;
    padding-left: 30px;
}

.details_style_solo {
    margin: 10px;
    padding-left: 25px;
}

.details_style_solo p {
    margin-left: 35px;
}

.details_style_solo a {
    text-decoration: none;
}

/* FIN FOOTER */
/* MODELE PAGE RESTAURANT */

#page_restaurant {
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 15px;
}

#page_restaurant h1 {
    margin: auto;
}

#page_restaurant_affiche {
    width: 100%;
    height: 330px;
}

#page_restaurant_menu {
    position: relative;
    background-color: #fdfdfd;
    margin-top: -80px;
    padding: 10px;
    border-top-right-radius: 40px;
    border-top-left-radius: 40px;
}

.container_titre {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
}

.container_titre h1 {
    margin: 25px 0px;
    font-size: 35px;
}

.material-symbols-outlined {
    font-size: xx-large;
}

.container_vignette_choix {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.container_vignette_choix h3 {
    border-bottom: solid;
    width: 12%;
    border-color: #99E2D0;
}

.vignette_choix {
    width: 98%;
    height: 10vh;
    background-color: #ffffff;
    border-radius: 16px;
    box-shadow: 1px 1px 8px 0px #cccccc;
    display: flex;
    flex-direction: row;
    overflow: hidden;
    position: relative;
}

/* STYLE TRANSITION VIGNETTE CHOIX */

.effet_transition {
    -webkit-animation: fadeInTop 3s both;
    -moz-animation: fadeInTop 3s both;
    -o-animation: fadeInTop 3s both;
    animation: fadeInTop 3s both;
}

@-webkit-keyframes fadeInTop {
    0%{
        opacity: 0;
        -webkit-transform: translateY(-100px);
    }
    100%{
        opacity: 1;
        -webkit-transform: translateY(0);
    }
}

@-moz-keyframes fadeInTop {
    0%{
        opacity: 0;
        -moz-transform: translateY(-100px);
    }
    100%{
        opacity: 1;
        -moz-transform: translateY(0);
    }
}

@-o-keyframes fadeInTop {
    0%{
        opacity: 0;
        -o-transform: translateY(-100px);
    }
    100%{
        opacity: 1;
        -o-transform: translateY(0);
    }
}

@keyframes fadeInTop {
    0%{
        opacity: 0;
        transform: translateY(-100px);
    }
    100%{
        opacity: 1;
        transform: translateY(0);
    }
}

/* FIN STYLE TRANSITION VIGNETTE CHOIX */

.info_plat {
    margin: 5px 0 0 15px;
}

.info_plat h2 {
    margin: 10px 0 10px 10px;
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
}

.info_plat p {
    margin: 0 0 0 10px;
}

.info_prix p {
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    margin: 50px 10px 0 0;
    position: absolute;
    right: 25px;
}

.vignette_choix button {
    width: 100%;
    height: 100%;
    border-bottom-right-radius: 16px;
    border-top-right-radius: 16px;
    border: 1px white;
    background-color: #99E2D0;
}

.ajout_plat {
    width: 18%;
    height: 100%;
    transform: translateX(81px);
    transition-timing-function: ease;
    transition-duration: 1s;
    position: absolute;
    right: 0px;
}

.ajout_plat_style {
    color: white;
    transition-duration: 0.9s;
    transform: rotate(0deg);
}

.ajout_plat_style:hover {
    transform: rotate(360deg);
}

.vignette_choix:hover > .info_prix p {
    right: 90px;
}

.vignette_choix:hover > .ajout_plat {
    transform: translateX(0px);
}

/* .ajout_plat:hover > .ajout_plat_style {
    transform: rotate(360deg);
} */

.valider_panier {
    margin: 40px auto;
    display: flex;
    justify-content: center;
}

.valider_panier button {
    background: linear-gradient(#FF79DA, #9356DC);
    font-family: 'Roboto', sans-serif;
    font-size: 18px;
    border: none;
    border-radius: 26px;
    height: 50px;
    width: 40%;
    color: white;
}

/* FIN MODELE PAGE RESTAURANT */

/* BREAKPOINT VERSION TABLETTE & DESKTOP */
/* DEBUT VERSION TABLETTE */
@media screen and (min-width: 481px) { 
    body {
        width: 100%;
        height: 100%;
    }

    /* DEBUT MODELE ACCUEIL  */

    #menu {
        height: 280px;
    }

    #fonctionnement h2 {
        margin: 30px 0 30px 0;
        text-align: center;
        font-size: 34px;
    }

    .vignettes_fonctionnement {
        width: 70%;
    }

    #restaurants h2 {
        margin: 15px 0 30px 0px;
        text-align: center;
        font-size: 34px;
    }

    #container_vignette_restaurants {
        flex-direction: row;
        flex-wrap: wrap;
        gap: 10px;
    }

    .vignettes_restaurants {
        width: 48%;
        height: 280px;
    }

    footer h1 {
        font-size: 34px;
        margin: 0 0 20px 0;
        text-align: center;
    }

    #details {
        flex-direction: row;
        gap: none;
        justify-content: space-around;
    }

    .details_style, .details_style_solo {
        padding-left: 0px;
    }
    /* FIN MODELE ACCUEIL */
    /* DEBUT MODELE PAGE RESTAURANT */

    #page_restaurant_menu {
        margin-top: 40px;
        margin-bottom: 40px;
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }

    .container_titre {
        justify-content: center;
        gap: 25px;
        margin: auto;
        width: 100%;
    }

    .container_vignette_choix {
        display: flex;
        flex-direction: column;
        gap: 20px;
        flex-wrap: wrap;
        width: 50%;
        height: auto;
    }

    .container_vignette_choix h3 {
        font-size: 24px;
        width: 16%;
    }

    .vignette_choix {
        width: 90%;
        height: 10vh;
    }

    .info_plat {
        margin: 5px 0 0 10px;
    }
    
    .info_plat h2 {
        margin: 10px 0 10px 0px;
        font-family: 'Roboto', sans-serif;
        font-size: 18px;
    }

    .info_plat p {
        margin: 0 0 0 0px;
        font-size: 14px;
    }

    .info_prix p {
        margin: 0 0 0 0;
        font-size: 14px;
        bottom: 20px;
    }

    .ajout_plat {
        width: 24%;
    }

    .valider_panier {
        align-items: center;
        justify-content: center;
        width: 50%;
    }

    .valider_panier button {
        font-size: 22px;
        height: 60px;
        width: 80%;
    }

    /* FIN MODELE PAGE RESTAURANT */
}

/* FIN VERSION TABLETTE */
/* DEBUT VERSION DESKTOP */
@media screen and (min-width: 1025px) {
    body {
        background-color: red;
    }
    
}

/* FIN VERSION DESKTOP */

